Cant think of a commit message

--- a/static/parent_account.css
+++ b/static/parent_account.css
@@ -156,7 +156,7 @@ body {
     text-align: right;
 }
 
-.transfer input.make_tranfser {
+.transfer input.make_transfer {
     width: 310px;
     margin-left: 70px;
     margin-top: 10px;
