--- a/templates/parent_account.html
+++ b/templates/parent_account.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" type="text/css" href= {% static 'parent_account.css' %}/>
     <script type="text/javascript">
     </script>
-    <style>
-        #nav_bar {
-            background-image: url('{% static "general\lloyds_group_logo.png" %}');
-        }
-    </style>
+	<style>
+		#content {background-image: url('{% static "login\background_signup.jpg" %}') ;}
+		#nav_bar {background-image: url('{% static "login\lloyds_group_logo.png" %}') ;}
+	</style>
     <title>Parent Account</title>
 </head>
 
