--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -14,12 +14,9 @@
 
 <body>
 
-<div id="nav_bar">
-	<ul>	
-        <li><a href="Landing_Page.html">Main Website</a></li>
-        <li><a href="Landing_Page.html#p1">About Junior Banking</a></li>
-        <!--<li><a href="SignUp.html">Sign Up</a></li> -->
-	</ul>
+    <div id="nav_bar">
+        {% include 'logout_button.html' %}
+    </div>
 </div>
 
 <div id="main">
