--- a/static/parent_account.css
+++ b/static/parent_account.css
@@ -1,11 +1,13 @@
 /**---------------------------------------------------------------------*/
 body {
     background-color: #262626;
+    padding:-1em;
 }
 
 #content {
     background-color: #262626;
-    margin: 0% auto;
+    width:100%;
+    margin: 0;
 }
 
 #logout {
