--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -24,29 +24,29 @@
 
 <div id="register">
 		
-	<div id="form">
+	<form id="form">
 		<p id="form_title">Register</p>
-			
+
 		<p class="field_title">Email(ID) <input type="text" class="input_field"/></p>
-			
-		<p class="field_title">Password <input type="text" class="input_field"/></p> 
-		
+
+		<p class="field_title">Password <input type="text" class="input_field"/></p>
+
 		<p class="field_title">Full Name <input type="text" class="input_field"/></p>
-		
-		<p class="field_title">Date of Birth 
+
+		<p class="field_title">Date of Birth
 			<input id="day" maxlength="2"/> /
 			<input id="month" maxlength="2"/> /
 			<input id="year" maxlength="4"/>
-		</p> 
-		
+		</p>
+
 		<p class="field_title">Account Number <input type="text" class="input_field"/></p>
-		
+
 		<p class="field_title">Address <input type="text" class="input_field" id="address"/></p>
-		
+
 		<p class="field_title">Upload Photo <button id="upload_photo">Browse</button></p>
 		
-		<input id="register_button" type="button" value="REGISTER" id="j_log" onclick="" />
-	</div>
+		<input id="register_button" type="submit" value="Register" id="j_log" onclick="" />
+	</form>
 </div>
 </div>
 
