--- a/static/profile/profile-CSS.css
+++ b/static/profile/profile-CSS.css
@@ -1,5 +1,7 @@
 @charset "utf-8";
-/* CSS Document */
+/* CSS Document 
+ <!--Author: Hailong Ren-->
+*/
 #content {
     margin-left: auto;
     margin-right: auto;
