--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -21,9 +21,13 @@
 
 <body>
 
-    <div id="nav_bar">
-        {% include 'logout_button.html' %}
-    </div>
+<div id="nav_bar">
+    <ul>
+        <li><a href="{% url 'signup' %}" id ='signUp'>Register Child</a></li>
+        <li><a href="{% url 'logout' %}" id = 'log'>Log out</a></li>
+        <!--<li><a href="SignUp.html">Sign Up</a></li> -->
+    </ul>
+</div>
 </div>
 
 <div id="main">
