--- a/templates/Accounts.html
+++ b/templates/Accounts.html
@@ -5,6 +5,7 @@
 <head>
     <title>{% block title %}Lloyds NetBanking{% endblock %} </title>
     <meta charset="utf-8"/>
+    <link rel="stylesheet" type="text/css" href={% static 'general/nav_bar.css' %}/>
     <link rel="stylesheet" type="text/css" href={% static 'accounts/Accounts.css' %}/>
     <style>
         body {
