--- a/templates/parent_account.html
+++ b/templates/parent_account.html
@@ -8,7 +8,7 @@
     <script type="text/javascript">
     </script>
 	<style>
-		#content {background-image: url('{% static "login\parent.jpg" %}') ;background-size: 100% 50%;}
+		#content {background-image: url('{% static "login\parent2.jpg" %}') ;background-size: 100% 50%;}
 		#nav_bar {background-image: url('{% static "login\lloyds_group_logo.png" %}') ;}
 	</style>
     <title>Parent Account</title>
