--- a/static/parent_account.css
+++ b/static/parent_account.css
@@ -74,23 +74,23 @@ body {
 /**---------------------------------------------------------------------*/
 
 /**---------------------------------------------------------------------*/
-.management_panel,  .atms_panel {
+#management_panel,  .atms_panel {
     width: 1450px;
     height: 400px;
     margin: 100px auto;
-    color: #FFFFFF;
+    color: #0B8C52;
     /*border: 1px solid black;*/
 }
 .goal_panel {
     width: 1450px;
     height: 600px;
     margin: 100px auto;
-    color: #FFFFFF;
+    color: #0B8C52;
 }
 
 .title {
     font-family: Century Gothic;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
     color: #FFFFFF;
     background-color: #0B8C52;
@@ -100,7 +100,8 @@ body {
     height: 100px;
 }
 
-.bar {
+#bar {
+    opacity:0.9;
     position:fixed;
     font-family: Century Gothic;
     text-aligh: center;
@@ -118,33 +119,34 @@ body {
 
 }
 
-.manage_child_account, #choose_atms {
+#manage_child_account, #choose_atms {
     width: 1450px;
     height: 300px;
-    background-color: #5B6562;
+    opacity:0.9;
+    background-color: #FFFFFF;
     border: 5px solid #0B8C52;
 }
 #set_goals{
      width: 1450px;
     height: 350px;
-    background-color: #5B6562;
+    background-color: #FFFFFF;
     border: 5px solid #0B8C52;
 }
-.manage_child_account {
+#manage_child_account {
     vertical-align: middle;
 }
 
 /**---------------------------------------------------------------------*/
 
 /**---------------------------------------------------------------------*/
-.manage_child_account p {
+#manage_child_account p {
     font-family: Century Gothic;
     font-weight: bold;
     font-size: 25px;
     margin: 30px;
 }
 
-.child_accounts, #transfer, .set_limit {
+.child_accounts, #transfer, #set_limit {
     display: block;
     width: 450px;
     float: left;
@@ -170,7 +172,7 @@ body {
     text-align: right;
 }
 
-#transfer input.make_transfer {
+#transfer input#make_transfer {
     width: 310px;
     margin-left: 70px;
     margin-top: 10px;
@@ -189,18 +191,18 @@ body {
     vertical-align: middle;
 }
 
-.set_limit {
+#set_limit {
     margin: 15px;
 }
 
-.set_limit p input {
+#set_limit p input {
     height: 30px;
     width: 300px;
     margin: 10px;
     vertical-align: middle;
 }
 
-.set_limit input.set_limit {
+#set_limit input#set_limit {
     background-color: #0B8C52;
     height: 35px;
     font-family: Century Gothic;
@@ -261,6 +263,8 @@ form#set_goals p {
 
 #new_goal {
     width: 550px;
+
+    opacity:0.9;
 }
 
 #completed_goals, #new_goal {
