--- a/templates/home.html
+++ b/templates/home.html
@@ -46,10 +46,10 @@
             <p>ATMs</p>
         </a>
 
-        <a href={% url 'profile' %} class="buttons">
-            <img src={% static 'home/photo.jpg' %} width="200px" height="200px" alt="Profile" id="photo">
+        <a href={% url 'logout' %} class="buttons">
+            <img src={% static 'home/logout.png' %} width="200px" height="200px" alt="logout" id="arrow">
 
-            <p>Profile</p>
+            <p>Logout</p>
         </a>
 
         <a href={% url 'collection' %} class="buttons">
