--- a/templates/parent_account.html
+++ b/templates/parent_account.html
@@ -109,7 +109,7 @@
     <div class="atms_panel">
         <p class="title">Select Safe ATMs</p>
 
-        <form id="choose_atms">
+        <form id="choose_atms" method="post">
             <p class="prompt">Select from the list of ATMs</p>
 
             <p>
