--- a/templates/Guide.html
+++ b/templates/Guide.html
@@ -170,6 +170,13 @@
             <p>A <b>deposit</b> is when you put money in your bank account</p>
 
             <p>A <b>withdrawal</b> is when you take money out of your bank account.</p>
+          <p>A <b>withdrawal</b> is when you take money out of your bank account.</p>
+            <p><b>Interest</b> is money paid into your account by the bank at the end 
+            of each financial year (normally at the start of April), which is usually a 	         
+            percentage of what is currently in your account, as a reward for saving            
+            your money.</p>
+            <p>A <b>Current Account</b> is a regular bank account, which you can use to pay for things or receive money through.</p>
+            <p>An <b>Independent Savings Account </b>(Or ISA) is an account independent from your current account designed for saving money via interest.</p>
         </div>
 
         <div id="banking_tips_box"
@@ -177,8 +184,8 @@
             <h3>Get a savings account</h3>
             <ul>
                 <li>If you really want to save a lot of money then getting a savings account is important and it should
-                    be separate to your normal account
-                </li>
+                    be separate to your normal account </li>
+				<li>With Lloyds’ Junior ISA, you will be paid 3% on top of everything you save each year!</li>
             </ul>
             <h3>Start saving your money now</h3>
             <ul>
