--- a/templates/Landing_Page.html
+++ b/templates/Landing_Page.html
@@ -51,41 +51,25 @@
 <div id="about_start">
     <div class="grey">
         <div class="ABOUT_content">
-            <p class="site_info">Lloyds Junior Banking is ...
-                <br/>______________________________
-                <br/>______________________________
-                <br/>______________________________
-                <br/>______________________________
-            </p>
+            <p class="site_info">Lloyds Junior Banking is a way for parents to have control over their children's finances.</p>
+            <p class="site_info">It's a fun way to teach your children the value of saving.</p>
         </div>
     </div>
 
     <div class="green">
         <div class="ABOUT_content">
-            <img src={% static 'login/pages/4.png' %} width="370px" height="250px" alt="home" class="page_sample"/>
-            <img src={% static 'login/pages/11.png' %} width="300px" height="250px" alt="home" class="page_sample"/>
+            <img src={% static 'login/pages/4.png' %} width="450px" height="250px" alt="home" class="page_sample"/>
 
-            <p class="site_info">Two types of interfaces
-                <br/>______________________________
-                <br/>______________________________
-                <br/>______________________________
-                <br/>______________________________
+            <p class="site_info">Two types of interfaces allow seamless use. Just log in and manage your finances!
             </p>
+
+            <img src={% static 'login/pages/11.png' %} width="450px" height="250px" alt="home" class="page_sample"/>
         </div>
     </div>
 
     <div class="white">
         <div class="ABOUT_content">
-            <p class="site_info">Money management
-                <br/>system via two types of
-                <br/>Child Accounts
-            </p>
-
-            <p class="site_info">__________________
-                <br/>______________________________
-                <br/>______________________________
-                <br/>______________________________
-                <br/>______________________________
+            <p class="site_info">Money management system via two types of accounts. Spend money in your 'Pocket' and when you want to save money in your 'Stash' will be automatically applied to your Goals!
             </p>
 
             <img src={% static 'login/pages/5.png' %} width="300px" height="250px" alt="home" class="page_sample"/>
