--- a/templates/parent_account.html
+++ b/templates/parent_account.html
@@ -8,7 +8,7 @@
     <script type="text/javascript">
     </script>
 	<style>
-		body {background-image: url('{% static "login\parent4.jpg" %}') ;}
+		body {background-image: url('{% static "login\parent4.jpg" %}') ; repeat:none;}
 		#nav_bar {background-image: url('{% static "login\lloyds_group_logo.png" %}') ;}
 	</style>
     <title>Parent Account</title>
