--- a/static/accounts/Accounts.css
+++ b/static/accounts/Accounts.css
@@ -147,7 +147,7 @@ input.make_transfer {
     color: #0B8C52;
     position: relative;
     bottom: 220px;
-    left: 85px;
+    left: 38%;
 }
 
 /**---------------------------------------------------------------------*/
@@ -199,23 +199,7 @@ table td {
 
 /**---------------------------------------------------------------------*/
 
-/**---------------------------------------------------------------------*/
-#footer {
-    background-color: #D0CECE;
-    height: 80px;
-    width: 1055px;
-    font-family: Century Gothic;
-    color: #0B8C52;
-    font-size: 25px;
-    text-align: center;
-    padding-top: 40px;
-    margin: 0% auto;
-}
 
-#footer p {
-    width: 200px;
-    margin: auto;
-}
 
 /**---------------------------------------------------------------------*/
 
