--- a/templates/404.html
+++ b/templates/404.html
@@ -17,15 +17,13 @@
 <body>
 
 <div id="content">
-    <h1>404 Error</h1>
+    <h1>Oops!</h1>
 
-    <p>Page not found</p>
+    <p>Something went wrong.</p>
+    <p>How about heading to our <a href="{% url 'landing' %}">login page</a>?</p>
 </div>
 
 
-<div id="footer">
-    <p>Page Footer</p>
-</div>
 
 </div>
 </body>
