--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="content-type"
           content="text/html;charset=utf-8"/>
     <link rel="stylesheet" type="text/css" href={% static 'home/home.css' %}/>
+    <link rel="stylesheet" type="text/css" href={% static 'footer.css' %}/>
     <style>
         body {
             background-image: url('{% static "general\background_kids.jpg" %}');
